# FeigeChat-Desktop

./: .gitignore  LICENSE  README.md
examples/feigechat-qml/: login.qml
pb/: create.sh
src/: CMakeLists.txt
src/chatkit/: CMakeLists.txt
src/chatkit/cim/base/: log.h
src/chatkit/cim/db/: config_dao.h
src/chatkit/cim/pb/: CIM.Def.pb.cc  CIM.Def.pb.h  CIM.Friend.pb.cc  CIM.Friend.pb.h  CIM.Group.pb.cc  CIM.Group.pb.h  CIM.List.pb.cc  CIM.List.pb.h  CIM.Login.pb.cc  CIM.Login.pb.h  CIM.Message.pb.cc  CIM.Message.pb.h  CIM.Voip.pb.cc  CIM.Voip.pb.h
src/feigechat/: CMakeLists.txt
src/feigechat/gui/: logindialog.cpp  logindialog.h  logindialog.ui  user_register_dialog.cpp
src/test/client/: CMakeLists.txt
src/test/unit_test/: CMakeLists.txt
